# ssspy

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  codecov.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REAUEST_TEMPLATE.md  release.yaml
.github/workflows/: dummy_workflow_call.yaml  lint.yaml  test_docs.yaml  test_package.yaml  test_package_macos-13.yaml  test_package_macos-13_python-3.10.yaml  test_package_macos-13_python-3.11.yaml  test_package_macos-13_python-3.12.yaml  test_package_macos-13_python-3.8.yaml  test_package_macos-13_python-3.9.yaml  test_package_macos-latest.yaml  test_package_macos-latest_python-3.10.yaml  test_package_macos-latest_python-3.11.yaml  test_package_macos-latest_python-3.12.yaml  test_package_macos-latest_python-3.8.yaml  test_package_macos-latest_python-3.9.yaml  test_package_main.yaml  test_package_ubuntu-latest.yaml  test_package_ubuntu-latest_python-3.10.yaml  test_package_ubuntu-latest_python-3.11.yaml  test_package_ubuntu-latest_python-3.12.yaml  test_package_ubuntu-latest_python-3.8.yaml  test_package_ubuntu-latest_python-3.9.yaml  test_package_windows-latest.yaml  test_package_windows-latest_python-3.10.yaml  test_package_windows-latest_python-3.11.yaml  test_package_windows-latest_python-3.12.yaml  test_package_windows-latest_python-3.8.yaml  test_package_windows-latest_python-3.9.yaml  upload_package.yaml
docs/: api.rst  conf.py  convert_notebooks.sh  index.rst  pre_build.sh  requirements.txt  ssspy.algorithm.rst  ssspy.bss.admmbss.rst  ssspy.bss.base.rst  ssspy.bss.cacgmm.rst  ssspy.bss.fdica.rst  ssspy.bss.hva.rst  ssspy.bss.ica.rst  ssspy.bss.ilrma.rst  ssspy.bss.iva.rst  ssspy.bss.mnmf.rst  ssspy.bss.pdsbss.rst  ssspy.bss.proxbss.rst  ssspy.bss.rst  ssspy.linalg.rst  ssspy.special.rst  ssspy.transform.rst
notebooks/BSS/ADMMBSS/: ADMMBSS.ipynb  ADMMBSS_multi-penalty.ipynb
notebooks/BSS/CACGMM/: CACGMM.ipynb
notebooks/BSS/FDICA/: AuxFDICA-IP1.ipynb  AuxFDICA-IP2.ipynb  AuxLaplaceFDICA-IP1.ipynb  AuxLaplaceFDICA-IP2.ipynb  GradFDICA.ipynb  GradLaplaceFDICA.ipynb  NaturalGradFDICA.ipynb  NaturalGradLaplaceFDICA.ipynb
notebooks/BSS/HVA/: ADMM-HVA.ipynb  HVA.ipynb
notebooks/BSS/ICA/: FastICA.ipynb  GradICA.ipynb  NaturalGradICA.ipynb
notebooks/BSS/ILRMA/: GGDILRMA-IP1-MM.ipynb  GGDILRMA-IP1.ipynb  GGDILRMA-IP2-MM.ipynb  GGDILRMA-IP2.ipynb  GGDILRMA-ISS1-MM.ipynb  GGDILRMA-ISS1.ipynb  GGDILRMA-ISS2-MM.ipynb  GGDILRMA-ISS2.ipynb  GaussILRMA-IP1-ME.ipynb  GaussILRMA-IP1-MM.ipynb  (+24 more)
notebooks/Examples/: Getting-Started.ipynb
notebooks/ISSUE/: AuxIVA-FastIP1.ipynb  issue156.ipynb  issue184.ipynb  issue210.ipynb  issue218.ipynb
notebooks/bss/: AuxFDICA-IP1.ipynb  AuxFDICA-IP2.ipynb  AuxGaussIVA-IP1.ipynb  AuxGaussIVA-IP2.ipynb  AuxGaussIVA-ISS1.ipynb  AuxGaussIVA-ISS2.ipynb  AuxIVA-IP1.ipynb  AuxIVA-IP2.ipynb  AuxIVA-ISS1.ipynb  AuxIVA-ISS2.ipynb  FastIVA.ipynb  FasterIVA.ipynb  GGDILRMA-IP1.ipynb  GGDILRMA-IP2.ipynb  GGDILRMA-ISS1.ipynb  GGDILRMA-ISS2.ipynb  GaussILRMA-IP1.ipynb  GaussILRMA-IP2.ipynb  GaussILRMA-ISS1.ipynb  GaussILRMA-ISS2.ipynb  GradFDICA.ipynb  GradGaussIVA.ipynb  GradICA.ipynb  GradIVA.ipynb  GradLaplaceIVA.ipynb  NaturalGradFDICA.ipynb  NaturalGradGaussIVA.ipynb  NaturalGradICA.ipynb  NaturalGradIVA.ipynb  TILRMA-IP1.ipynb  TILRMA-IP2.ipynb  TILRMA-ISS1.ipynb  TILRMA-ISS2.ipynb
requirements/: dev.txt  docs.txt
ssspy/: .gitignore  __init__.py
ssspy/algorithm/: __init__.py  minimal_distortion_principle.py  permutation_alignment.py  projection_back.py
ssspy/bss/: __init__.py  _flooring.py  _psd.py  _select_pair.py  _solve_permutation.py  _update_spatial_model.py  admmbss.py  base.py  cacgmm.py  cwmm.py  fdica.py  hva.py  ica.py  ilrma.py  ipsdta.py  iva.py  mnmf.py  pdsbss.py  proxbss.py
ssspy/io/: __init__.py
ssspy/linalg/: __init__.py  _solve.py  cubic.py  eigh.py  inv.py  lqpqm.py  mean.py  polynomial.py  prox.py  quadratic.py  sqrtm.py
ssspy/special/: __init__.py  logsumexp.py  psd.py  softmax.py
ssspy/transform/: __init__.py  pca.py  whiten.py
ssspy/utils/: __init__.py  flooring.py
tests/: conftest.py
tests/algorithm/: test_projection_back.py
tests/bss/: create_dataset.py  test_fdica.py  test_ica.py  test_ilrma.py  test_iva.py  test_pdsbss.py  test_select_pair.py  test_update_spatial_model.py
tests/dummy/: callback.py  io.py
tests/linalg/: test_eigh.py  test_inv.py
tests/scripts/: download_all.py  download_mird.bat  download_mird.sh  download_sisec2011.bat  download_sisec2011.sh
tests/transform/: test_pca.py  test_whiten.py
tests/utils/: test_dataset.py
(+167 files in other folders)
