[metadata]
name = ssspy
version = attr: ssspy.__init__.__version__
description = "A python library for sound source separation."
long_description = file: README.md
license = "MIT License"
url = "https://github.com/tky823/ssspy"
python_requires = ">=3.7, <4"

[options]
packages = find:
install_requires =
    numpy

[options.packages.find]
exclude =
    "requirements"
