[metadata]
name = ssspy
version = attr: ssspy.__init__.__version__
author = "Takuya Hasumi"
description = "A Python toolkit for sound source separation."
long_description = file: README.md
license = "MIT License"
url = "https://github.com/tky823/ssspy"
python_requires = ">=3.7, <4"

[options]
packages = find:
install_requires =
    numpy

[options.extras_require]
dev =
    scipy
    soundfile
    flake8
    black
docs =
    sphinx
    sphinx-autodoc-typehints
    furo
tests =
    pytest
    pytest-cov

[options.packages.find]
exclude =
    ".github"
    "docs"
    "notebooks"
    "tests"
